Fix top margin on mobile, change button

--- a/css/main.css
+++ b/css/main.css
@@ -144,9 +144,9 @@ textarea {
        margin-top: 50px;
      }
 
-     .albums {
+     /* .albums {
        margin-top: 50px;
-     }
+     } */
 
      /* #img {
       margin: auto;
@@ -171,12 +171,12 @@ textarea {
     }
 
     .btn:hover {
-      background: #3cb0fd;
-      background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-      background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-      background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-      background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-      background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+      background: #51a1f1;
+      background-image: -webkit-linear-gradient(top, #51a1f1, #3448c9);
+      background-image: -moz-linear-gradient(top, #51a1f1, #3448c9);
+      background-image: -ms-linear-gradient(top, #51a1f1, #3448c9);
+      background-image: -o-linear-gradient(top, #51a1f1, #3448c9);
+      background-image: linear-gradient(to bottom, #51a1f1, #3448c9);
       color: white;
     }
 
@@ -218,6 +218,12 @@ textarea {
 
     .container {
       margin-bottom: 20px;
+    }
+
+    @media only screen and (max-width: 470px) {
+      .content {
+        margin-top: 22px;
+      }
     }
 
 
@@ -319,16 +325,7 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
 
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
 
 /* ==========================================================================
    Print styles.
